# biblioteca-virtual

./: .env.example  .gitignore  Dockerfile  NOTIFICATIONS_SETUP.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(admin)/: layout.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: PageTransition.tsx
frontend/src/components/books/: CreateBookDialog.tsx
frontend/src/components/loans/: CreateLoanDialog.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/components/users/: CreateUserDialog.tsx
frontend/src/lib/: api.ts
insomnia/: biblioteca_virtual.insomnia.json
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_notifications.py
postman/: biblioteca_virtual.postman_collection.json  biblioteca_virtual.postman_environment.json
scripts/: notifications_admin.py  seed.py
src/biblioteca_virtual/: main.py
src/biblioteca_virtual/api/v1/: auth.py  books.py  loans.py  router.py  users.py
src/biblioteca_virtual/core/: cache.py  config.py  constants.py  db.py  errors.py  health.py  logging.py  metrics.py  middleware.py  rate_limit.py  scheduler.py  security.py
src/biblioteca_virtual/modules/auth/: service.py
src/biblioteca_virtual/shared/: pagination.py
tests/: conftest.py  test_api_integration.py  test_loan_service.py  test_notifications.py  test_unit_services.py
(+25 files in other folders)
