[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biblioteca-virtual"
version = "0.1.0"
description = "API de gerenciamento de biblioteca digital"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "SQLAlchemy==2.0.30",
  "psycopg2-binary==2.9.9",
  "asyncpg==0.29.0",
  "alembic==1.13.2",
  "pydantic==2.7.1",
  "pydantic-settings==2.3.3",
  "email-validator==2.1.1",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==3.2.2",
  "python-multipart==0.0.9",
  "redis==5.0.4",
  "fastapi-limiter==0.1.6",
  "structlog==24.2.0",
  "prometheus-fastapi-instrumentator==7.0.0",
  "httpx==0.27.0",
  "apscheduler==3.10.4",
  "jinja2==3.1.2"
]

[project.optional-dependencies]
dev = [
  "aiosqlite==0.20.0",
  "pytest==8.2.1",
  "pytest-asyncio==0.23.7",
  "pytest-cov==5.0.0",
  "ruff==0.4.8",
  "mypy==1.10.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
